--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "php": ">=7.4",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
+        "drupal/component": "^1.0@RC",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
-        "drush/drush": "^11.0",
+        "drupal/module_missing_message_fixer": "^2.0",
+        "drush/drush": "^11.1",
         "vlucas/phpdotenv": "^5.1",
         "webflo/drupal-finder": "^1.2"
     },
