--- a/web/modules/custom/gcc-react-components/components/example_tabs2/example_tabs2.component.yml
+++ b/web/modules/custom/gcc-react-components/components/example_tabs2/example_tabs2.component.yml
@@ -1,5 +1,5 @@
 ### THESE FIELDS ARE REQUIRED. ###
-name: Example Tabs NEW
+name: Example Tabs NEW 2.0
 description: 'Example tabs NEW'
 ### THESE FIELDS ARE OPTIONAL. ###
 # Put in the way the component should be added to the system. Current
