--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,10 @@
         "cweagans/composer-patches": "^1.7",
         "drupal/ckeditor_templates": "^1.2",
         "drupal/ckeditor_templates_ui": "^1.4",
+        "drupal/component": "^1.0@RC",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/gutenberg": "^2.5",
         "drush/drush": "^11.0",
         "vlucas/phpdotenv": "^5.1",
         "webflo/drupal-finder": "^1.2"
